--- a/app/src/main/res/layout/fragment_quan_ly_hoa_don.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_hoa_don.xml
@@ -49,155 +49,34 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-
-
-        <HorizontalScrollView
-            android:scrollbars="none"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            >
+            <Button
+                android:id="@+id/btn_chuaxn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center">
+                android:text="Chưa Xác Nhận"
+                android:layout_marginRight="3dp"
+                android:background="@drawable/background_qlhd_button"
+                />
+            <Button
+                android:id="@+id/btn_daxn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Đã Xác Nhận"
+                android:layout_marginRight="3dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:background="@drawable/background_qlhd_button"
+                />
 
-                <androidx.cardview.widget.CardView
-                    android:layout_margin="5dp"
-                    app:cardElevation="2dp"
-                    app:cardCornerRadius="7dp"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:id="@+id/btn_qlhoadon_tatca"
-                        android:background="@color/light_blue_1"
-                        android:padding="7dp"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        >
-                        <androidx.cardview.widget.CardView
-                            app:cardCornerRadius="5dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            >
-
-                        </androidx.cardview.widget.CardView>
-                        <TextView
-                            android:textSize="13sp"
-                            android:fontFamily="@font/open_sans_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Tất cả"
-                            />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_margin="5dp"
-                    app:cardElevation="2dp"
-                    app:cardCornerRadius="7dp"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    >
-
-                    <LinearLayout
-                        android:id="@+id/btn_dangxuly"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/echo_blue"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="7dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:cardCornerRadius="5dp">
-
-
-                        </androidx.cardview.widget.CardView>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Đang xử lý"
-                            android:textSize="13sp"
-                            android:fontFamily="@font/open_sans_regular"
-                            />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_margin="5dp"
-                    app:cardElevation="2dp"
-                    android:layout_width="90dp"
-                    app:cardCornerRadius="7dp"
-                    android:layout_height="wrap_content"
-                    >
-
-                    <LinearLayout
-                        android:id="@+id/btn_daxacnhan"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/echo_blue"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="7dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:cardCornerRadius="5dp">
-
-
-                        </androidx.cardview.widget.CardView>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/open_sans_regular"
-                            android:text="Đã xác nhận"
-                            android:textSize="13sp" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    android:layout_margin="5dp"-->
-<!--                    app:cardElevation="2dp"-->
-<!--                    android:layout_width="80dp"-->
-<!--                    app:cardCornerRadius="7dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    >-->
-<!--                    <LinearLayout-->
-<!--                        android:id="@+id/btn_dagiao"-->
-<!--                        android:padding="7dp"-->
-<!--                        android:gravity="center"-->
-<!--                        android:background="@color/echo_blue"-->
-<!--                        android:orientation="vertical"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        >-->
-<!--                        <androidx.cardview.widget.CardView-->
-<!--                            app:cardCornerRadius="5dp"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            >-->
-
-<!--                        </androidx.cardview.widget.CardView>-->
-<!--                        <TextView-->
-<!--                            android:textSize="13sp"-->
-<!--                            android:fontFamily="@font/open_sans_regular"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Đã giao"-->
-<!--                            />-->
-<!--                    </LinearLayout>-->
-<!--                </androidx.cardview.widget.CardView>-->
-
-
-            </LinearLayout>
-        </HorizontalScrollView>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:scrollbars="none"
