--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -9,7 +9,7 @@
     android:gravity="center"
     android:weightSum="4"
     android:padding="10dp"
-    android:background="@drawable/background"
+    android:background="@drawable/backgroundinapp"
     >
 
     <ImageView
@@ -85,10 +85,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/colortextChu"
                 android:fontFamily="@font/open_sans_bold"
                 android:text="Tên : Sách A"
-                android:textSize="30sp" />
+                android:textColor="@color/colortextChu"
+                android:textSize="30sp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                />
 
             <ImageView
                 android:layout_width="50dp"
@@ -99,34 +102,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-            <ImageView
-                android:src="@drawable/ic_sao"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                />
-            <ImageView
-                android:src="@drawable/ic_sao"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                />
-            <ImageView
-                android:src="@drawable/ic_sao"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                />
-            <ImageView
-                android:src="@drawable/ic_sao"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                />
-            <ImageView
-                android:src="@drawable/ic_sao"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                />
+            android:layout_height="wrap_content">
+            <RatingBar
+                android:id="@+id/rating_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:progressTint="@color/honeysuckle"
+                android:progressBackgroundTint="@color/white"
+                android:numStars="5"
+                android:stepSize="1"
+                android:rating="0" />
         </LinearLayout>
+
 
         <LinearLayout
             android:gravity="center"
@@ -149,6 +136,8 @@
                     android:text="Giá sản phẩm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     />
                 <TextView
                     android:fontFamily="@font/open_sans_regular"
@@ -193,6 +182,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colortextChu"
                 android:textStyle="bold"
+                android:maxLines="3"
+                android:ellipsize="end"
                 />
 
         </LinearLayout>
