--- a/app/src/main/res/layout/fragment_lich_su_mua_hang.xml
+++ b/app/src/main/res/layout/fragment_lich_su_mua_hang.xml
@@ -4,18 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="10dp"
     tools:context=".Fragment.LichSuMuaHangFragment">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lịch sử mua hàng"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="#B81D1D"
-        android:textSize="30sp"
-        android:padding="10dp"/>
-
     <!-- Layout chứa các nút Button -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,25 +17,37 @@
         <Button
             android:id="@+id/btnAll"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:textSize="10sp"
-            android:text="Tất cả"/>
+            android:text="Tất cả"
+            android:textColor="@color/colortextChu"
+            android:background="@drawable/background_button"
+            android:layout_marginRight="5dp"
+            />
 
         <!-- Nút Button để lọc các đơn hàng đã nhận -->
         <Button
             android:id="@+id/btnReceived"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:textSize="10sp"
-            android:text="Đã nhận hàng"/>
+            android:text="Đã nhận hàng"
+            android:textColor="@color/colortextChu"
+            android:background="@drawable/background_button"
+            android:layout_marginRight="5dp"
+            />
 
         <!-- Nút Button để lọc các đơn hàng chưa nhận -->
         <Button
             android:id="@+id/btnNotReceived"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:textSize="10sp"
-            android:text="Chưa nhận hàng"/>
+            android:text="Chưa nhận hàng"
+            android:textColor="@color/colortextChu"
+            android:background="@drawable/background_button"
+            android:layout_marginRight="5dp"
+            />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
